traefik-dev/cert-manager-ingress-blue.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: nginx-blue-ingress
 namespace: nginx-blue
 annotations:
   cert-manager.io/cluster-issuer: "letsencrypt-cluster-issuer"
spec:
 tls:
   - hosts:
       - nginx-blue.su-root.net
     secretName: tls-nginx-blue-ingress-dns
 rules:
   - host: nginx-blue.su-root.net
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: nginx-deploy-blue
               port: 
                 number: 80
