traefik-dev/cert-manager-ingress-red.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: nginx-red-ingress
 namespace: nginx-red
 annotations:
   cert-manager.io/cluster-issuer: "letsencrypt-cluster-issuer"
spec:
 tls:
   - hosts:
       - nginx-red.su-root.net
     secretName: tls-nginx-red-ingress-dns
 rules:
   - host: nginx-red.su-root.net
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: nginx-deploy-red
               port: 
                 number: 80
