traefik-dev/cert-manager-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: nginx
 namespace: default
 annotations:
   cert-manager.io/cluster-issuer: "letsencrypt-cluster-issuer"
spec:
 tls:
   - hosts:
       - nginx.su-root.net
     secretName: tls-nginx-ingress-dns
 rules:
   - host: nginx.su-root.net
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: nginx-deploy-main
               port: 
                 number: 80
